--- a/reports/package_barcode_template_parafusos.xml
+++ b/reports/package_barcode_template_parafusos.xml
@@ -8,8 +8,8 @@
                         <div class="page">
                             <div class="row mt32 mb32" id="package_info">
                                 <div class="col-auto mv-200 mb-2">
-                                    <div class="col-12 text-center">
-                                        <p t-field="o.product_id.name" style="font-size:30px;">
+                                    <div class="col-12 text-center" style="padding-top:200px;">
+                                        <p t-field="o.product_id.name" style="font-size:30px;align-self:end;justify-self:end;">
                                         </p>
                                     </div>
                             </div>
@@ -19,6 +19,7 @@
                                     <div class="col-12 text-center">
                                         <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', o.name, 450, 150)" style="width:300;height:100" alt="Barcode"/>
                                         <p t-field="o.barcode"  style="font-size:30px;"></p>
+                                        <strong>QUANTIDADE</strong>
                                         <p t-field="o.qty" style="font-size:30px;">
                                         </p>
                                     </div>
