--- a/reports/package_barcode_template_parafusos.xml
+++ b/reports/package_barcode_template_parafusos.xml
@@ -1,39 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <odoo> 
     <data>
         <template id="report_package">
-            <t t-call="web.basic_layout">
-                <t t-foreach="docs" t-as="o">
-                    <t call="web.external_layout">
-                        <div class="page" style="padding-left:100px">
-                            <div class="row mt32 mb32" id="package_info">
-                                <div class="col-auto mv-200 mb-2">
-                                    <div class="col-12 text-center">
-                                        <p t-field="o.product_id.name" style="font-size:20px;">
-                                        </p>
-                                    </div>
-                            </div>
-                            <div class="row mt32 mb32" id="package_info" style="padding-top:10px;">
-                                </div>
-                                <div class="col-auto mv-200 mb-2" style="display:flex; flex-direction:row">
-                                    <div style="padding-top:100px;">
-                                        <p style="font-size:20px;" >QUANTIDADE</p>
-                                       <div style="display:flex; flex-direction:row">  
-                                       <p t-field="o.qty" style="font-size:30px;">
-                                       </p>
-                                       <p style="font-size:30px; padding-left:10px;"> CT </p>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 text-center">
-                                        <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', o.name, 450, 150)" style="width:300;height:100" alt="Barcode"/>
-                                        <p t-field="o.barcode"  style="font-size:30px;"></p> 
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+            <t t-name="custom_package_barcode.report_package">
+                <t t-call="web.html_container">
+                  <t t-call="web.basic_layout">
+                      <t t-foreach="docs" t-as="o">
+                          <t call="web.external_layout">
+                              <div class="page">
+                                  <div class="row mt32 mb32" id="package_info">
+                                      <div class="col-auto mv-200 mb-2">
+                                          <div class="col-12 text-center" style="padding-top:170px;width:350px;">
+                                              <p t-field="o.product_id.name" style="font-size:25px;overflow-wrap:break-word;">
+                                              </p>
+                                          </div>
+                                  </div>
+                                  <div class="row mt32 mb32" id="package_info">
+                                      </div>
+                                      <div class="col-auto mv-200 mb-2">
+                                          <div class="col-12 text-center">
+                                              <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', o.name, 300, 100)" style="width:300;height:100" alt="Barcode"/>
+                                              <p t-field="o.barcode" style="font-size:25px;"/>
+                                              <strong>QUANTIDADE</strong>
+                                              <p t-field="o.qty" style="font-size:25px;">
+                                              </p>
+                                              <p t-field="o.product_id.uom_id" style="font-size:25px;">
+                                              </p>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </t>
+                      </t>
                     </t>
                 </t>
-            </t>
+              </t>
         </template>
     </data>
 </odoo>
